second with CSS

--- a/john-doe-resume/john.html
+++ b/john-doe-resume/john.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>John Doe's Resume</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Thai:wght@100..900&display=swap">
     </head>
     <body>
         <header class="header">
             <h1>John Doe</h1>
-            <p>Web Developer</p>
+            <p class="subtext">Web Developer</p>
         </header>
-        <hr>
+        <br>
         <main class="main">
             <section class="about me">
               <h2>About Me</h2>
@@ -35,7 +37,7 @@
             <section class="contact me">
                 <h2>Contact Me</h2>
                 <p>Email: 
-                    <a href="john.doe@example.com" target="_blank">john.doe@example.com</a>
+                    <a href="mailto:john.doe@example.com" target="_blank">john.doe@example.com</a>
                 </p>
                 <p>Phone: +1234567890</p>
                 <p>LinkedIn: johndoe (<a href="https://www.linkedin.com/in/johndoe" target="_blank">https://www.linkedin.com/in/johndoe</a>)</p>
